2009-12-27  smeghead  <smeghead@smeghead-laptop>

    * 1.3.04リリース

2009-12-27  smeghead  <smeghead@smeghead-laptop>

    * チケット検索ページで、数値項目の合計を表示するようにした。
    * 数値項目の入力チェックを作成した。
    * 数値項目関連のメッセージリソースを更新した。
    * 状態別チケット一覧にも合計の行を追加した。
    * リリースの準備

2009-12-12  smeghead  <smeghead@smeghead-laptop>

    * サブプロジェクトの管理ページでトップへのリンクがプロジェクト名になってい
    なかったのを修正した。

2009-11-13  smeghead  <smeghead@smeghead-laptop>

    * 1.3.04リリース

2009-11-13  smeghead  <smeghead@smeghead-laptop>

    * 簡易wikiでもurlがあったらリンクで表示するように修正した。

2009-11-11  smeghead <smeghead@users.sourceforge.jp>

    * Cでのメール送信で本文にチケットの内容を表示できるようにした。
      (ただし、BASE64の改行を挿入する処理は未実装のため、送信するメールの内容は、RFC的に行儀が良くない。)

2009-11-10  smeghead <smeghead@users.sourceforge.jp>

    * パンクズのトップは、トップのプロジェクト名を表示するように修正した。

2009-11-05  smeghead <smeghead@users.sourceforge.jp>

    * 数値の項目を追加する。

2009-10-25  smeghead <smeghead@users.sourceforge.jp>

    * 複数行テキストの中に、http://かhttps://が存在したらリンクにするようにした。

2009-10-23  smeghead  <smeghead@smeghead-laptop>

    * 1.3.03リリース

2009-10-23  smeghead <smeghead@users.sourceforge.jp>

    * ラジオボタンの項目のJavaScript部分がIEで動作しないのを修正した。
    * Seleniumテストの更新

2009-10-22  smeghead <smeghead@users.sourceforge.jp>

    * Makefileのdistターゲットの修正。tar玉からはWindowsの依存バイナリを省くようにした。
    * ラジオボタンで選択できる単一選択肢の項目を追加できるようにした。

2009-09-10  smeghead <smeghead@users.sourceforge.jp>

    * HTMLのcssファイルの読み込み位置を修正した。

2009-08-31  smeghead <smeghead@users.sourceforge.jp>

    * 詳細の説明メッセージを変更した。
    * フッタのstarbug1の文字を公式サイトへのリンクに変更した。

2009-08-25  smeghead <smeghead@users.sourceforge.jp>

    * サブプロジェクトのページの左上にパンクズを表示するようにした。
    * 「新しいチケットを登録する」のリンクを目立つようにした。

2009-08-24  smeghead <smeghead@users.sourceforge.jp>

    * 検索結果のRSS形式のダウンロードでメモリの開放忘れがあったのを修正した。

2009-08-23  smeghead  <smeghead@smeghead-laptop>

    * 1.3.02リリース

2009-08-17  smeghead <smeghead@users.sourceforge.jp>

    * メッセージカタログを生成するMakefileを修正した。
    * 複数サブプロジェクトの検索の検索結果をチケットの投稿日時の降順で表示するように修正した。
    * qiuさんに中国語のリソース翻訳の修正版を提供してもらいました。
