@@ -1,3 +1,7 @@
+2009-12-29  kato  <kato@katopc3>
+
+    * sqlite3_finalizeを重複して実行してしまう場合があるバグを修正した。
+
 2009-12-27  smeghead  <smeghead@smeghead-laptop>
 
     * 1.3.04リリース
